--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,8 +21,8 @@
 
   <!-- 버튼 영역 -->
   <div id="button-section">
-    <a href="{{ url_for('video.video_logs') }}" class="btn">🎥 비디오 로그 보기</a>
-    <a href="{{ url_for('auth.logout') }}" class="btn">🚪 로그아웃</a>
+    <a href="{{ url_for('video.video_logs') }}" class="btn">비디오 로그 보기</a>
+    <a href="{{ url_for('auth.logout') }}" class="btn">로그아웃</a>
   </div>
 
   <!-- 하단: 차량 로그 -->
